# Galley

./: .dockerignore  .gitignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/commands/: add-feature.md  fix-feedback.md
.devcontainer/: devcontainer.json
.github/workflows/: package-deploy-stack.yml  publish-image.yml
.steering/20260213-initial-implementation/: design.md  requirements.md  tasklist.md
.steering/20260216-session-scoped-logging/: design.md  requirements.md  tasklist.md
.steering/20260217-distribution-terraform/: design.md  requirements.md  tasklist.md
.steering/20260217-mvp-implementation/: design.md  requirements.md  tasklist.md
.steering/20260217-phase3/: design.md  requirements.md  tasklist.md
.steering/20260218-deploy-fixes/: design.md  requirements.md  tasklist.md
.steering/20260218-hearing-tools/: design.md  requirements.md  tasklist.md
.steering/20260218-infra-prompts/: design.md  requirements.md  tasklist.md
.steering/20260218-phase4-infra/: design.md  requirements.md  tasklist.md
.steering/20260219-feedback-fix/: design.md  requirements.md  tasklist.md
.steering/20260219-hearing-chat-only/: requirements.md  tasklist.md
.steering/20260219-phase5-implementation/: design.md  requirements.md  tasklist.md
.steering/20260219-session-id-visibility/: design.md  requirements.md  tasklist.md
.steering/20260221-e2e-terraform-tests/: design.md  requirements.md  tasklist.md
.steering/20260224-iac-debug-loop/: design.md  requirements.md  tasklist.md
.steering/20260224-terraform-workflow-feedback/: design.md  requirements.md  tasklist.md
.steering/20260225-resource-manager-migration/: design.md  requirements.md  tasklist.md
config/: hearing-flow.yaml  hearing-questions.yaml  hearing-result-schema.json  oci-architectures.yaml  oci-services.yaml  oci-terraform.yaml
deploy/: api-gateway.tf  build-instance.tf  container-instance.tf  iam.tf  main.tf  network.tf  object-storage.tf  outputs.tf  security.tf  variables.tf
docker/: Dockerfile
docs/: architecture.md  development-guidelines.md  environment.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md  user_test.md
prompts/: deploy-to-rm.md  generate-architecture.md  resume-hearing.md  start-hearing.md
src/: index.ts  server.ts
tests/: conftest.py
(+139 files in other folders)
